--- a/실습2_flex/style.css
+++ b/실습2_flex/style.css
@@ -1,1 +1,32 @@
 /* 아래에 CSS를 작성해주세요. */
+.flex-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card {
+  display: flex;
+  width: 300px;
+  flex-direction: column;
+  margin-left: 10px;
+}
+
+.card img{
+  width: 300px;
+  height: 300px;
+  margin-right: 15px;
+  margin-bottom: 0px;
+  border-radius: 5px;
+}
+
+.card h3{
+  font-size: 14px;
+  margin-bottom: 0;
+  line-height: 1.5;
+}
+
+.card p{
+  margin: 0;
+  font-weight: bold;
+}
