--- a/실습4/css/style.css
+++ b/실습4/css/style.css
@@ -1,7 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
-
-body {
-  font-family: 'Noto Sans KR', sans-serif;
-  min-width: 1280px;
-  color: #333333;
+.top-btn {
+  position: fixed;
+  bottom: 1rem;
+  right: 1rem;
 }
